[project]
name = "orienteering-shiga-information"
version = "0.1.0"
description = ""
authors = ["Takashi Ichihashi <ta.ichihashi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-wagtail-theme",
    "sphinx-markdown-tables",
    "sphinxcontrib-actdiag",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-blockdiag",
    "sphinxcontrib-seqdiag",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jquery",
    "docxbuilder",
    "sphinx-autobuild>=2024.10.3",
]
