[project]
name = "orienteering-shiga-information"
version = "0.1.0"
description = ""
authors = ["Takashi Ichihashi <ta.ichihashi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-nameko-theme",
    "sphinx-markdown-tables",
    "sphinxcontrib-jquery",
    "docxbuilder",
    "sphinxnotes-strike",
    "sphinx-autobuild",
]
